--- a/templates/base.html
+++ b/templates/base.html
@@ -21,5 +21,14 @@
 	<div id="footer">
 		<p><small>A <a href="http://mylesbraithwaite.com/">Myles Braithwaite</a> website.</small></p>
 	</div>
+	<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+	try {
+	var pageTracker = _gat._getTracker("UA-1642439-12");
+	pageTracker._trackPageview();
+	} catch(err) {}</script>
 </body>
 </html>
