--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Myles Braithwaite">
 	<link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" charset="utf-8">
 	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<meta name="robots" content="noindex,nofollow">
 </head>
 <body>
 	<div id="header">
